--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Gastão Sousa
+SITE_NAME_HEADER=
 SITE_MAIN_LANGUAGE=pt
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -17,7 +17,7 @@ BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
